V 3.0.4 Fixed bug with vector animations overflowing

--- a/src/components/Hello/_hello.module.scss
+++ b/src/components/Hello/_hello.module.scss
@@ -13,6 +13,7 @@
   font-size: 7vw;
 
   position: relative;
+  overflow: hidden;
 }
 
 .content {
